--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "font-awesome": "^4.7.0",
+    "normalize.css": "^7.0.0",
     "vue-router": "^3.0.1"
   }
 }
